--- a/App/app/src/main/res/layout/activity_menu_admin.xml
+++ b/App/app/src/main/res/layout/activity_menu_admin.xml
@@ -90,13 +90,14 @@
             android:layout_height="1dp"
             android:layout_weight="1" >
         </Space>
+
         <Button
-            android:id="@+id/button_empleado_admin"
+            android:id="@+id/button_trabajador_admin"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:background="@color/colorSecondary"
-            android:textColor="@color/colorAccent"
-            android:text="Empleados" />
+            android:text="TRABAJADORES"
+            android:textColor="@color/colorAccent" />
         <Space
             android:layout_width="0dp"
             android:layout_height="1dp"
