--- a/App/app/src/main/res/layout/activity_agregar_tareas.xml
+++ b/App/app/src/main/res/layout/activity_agregar_tareas.xml
@@ -49,6 +49,7 @@
             tools:layout_editor_absoluteY="136dp" />
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/nombreTarea"
             android:layout_width="235dp"
             android:layout_height="44dp"
             android:layout_alignBaseline="@+id/textView6"
