--- a/App/app/src/main/res/layout/activity_editar_tareas.xml
+++ b/App/app/src/main/res/layout/activity_editar_tareas.xml
@@ -46,7 +46,7 @@
             android:text="Seleccionar tarea" />
 
         <Spinner
-            android:id="@+id/spinner3"
+            android:id="@+id/spinner_seleccionar_tarea"
             android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -70,6 +70,7 @@
             android:layout_toEndOf="@+id/textView10">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/text_nuevoNombreTarea"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
@@ -87,7 +88,7 @@
             android:id="@+id/spinner_tiposTarea2"
             android:layout_width="255dp"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/spinner3"
+            android:layout_alignEnd="@+id/spinner_seleccionar_tarea"
             android:layout_alignTop="@+id/textView12" />
     </RelativeLayout>
 
