--- a/App/app/src/main/res/layout/activity_agregar_operacion.xml
+++ b/App/app/src/main/res/layout/activity_agregar_operacion.xml
@@ -15,9 +15,9 @@
             android:id="@+id/button_agregar_operacion"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="125dp"
+            android:layout_marginTop="205dp"
             android:background="@color/colorSecondary"
             android:text="Confirmar"
             android:textColor="@color/colorAccent" />
@@ -53,6 +53,7 @@
             android:layout_marginTop="108dp">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/text_nombreOperacion_agregar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
@@ -61,26 +62,27 @@
             android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/textView8"
-            android:layout_marginTop="212dp"
-            android:text="Agregar tareas" />
+            android:layout_marginBottom="177dp"
+            android:text="Agregar tareas a la operación" />
 
         <Spinner
-            android:id="@+id/spinner2"
+            android:id="@+id/spinner_tareas_agregarOp"
             android:layout_width="255dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="44dp" />
+            android:layout_alignEnd="@+id/button_agregar_operacion"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="133dp" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+            android:id="@+id/floatingActionButton_agregarT_Op"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="124dp"
+            android:layout_marginEnd="36dp"
             android:clickable="true"
             app:backgroundTint="@color/colorPrimary"
             app:srcCompat="@android:drawable/ic_input_add" />
