--- a/App/app/src/main/res/layout/activity_editar_operacion.xml
+++ b/App/app/src/main/res/layout/activity_editar_operacion.xml
@@ -17,18 +17,18 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="178dp"
             android:background="@color/colorSecondary"
             android:text="Confirmar"
             android:textColor="@color/colorAccent" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton2"
+            android:id="@+id/floatingActionButton_agregarTarOp_editar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="136dp"
+            android:layout_marginBottom="64dp"
             android:layout_marginEnd="35dp"
             android:clickable="true"
             app:backgroundTint="@color/colorPrimary"
@@ -55,7 +55,7 @@
             android:text="Seleccionar operación" />
 
         <Spinner
-            android:id="@+id/spinner4"
+            android:id="@+id/spinner_operaciones_Editar"
             android:layout_width="225dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -70,17 +70,18 @@
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/textView15"
             android:layout_marginTop="235dp"
-            android:text="Nuevo nombre" />
+            android:text="Editar nombre" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="203dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="46dp"
-            android:layout_marginTop="216dp">
+            android:layout_marginEnd="48dp"
+            android:layout_marginTop="208dp">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/text_nuevoNombreOp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
@@ -91,17 +92,16 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/textView15"
-            android:layout_marginBottom="193dp"
-            android:text="Agregar tareas" />
+            android:layout_marginBottom="120dp"
+            android:text="Agregar tareas a la operacion" />
 
         <Spinner
-            android:id="@+id/spinner5"
+            android:id="@+id/spinner_tareas_editarOp"
             android:layout_width="221dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="145dp"
-            android:layout_marginStart="71dp" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="72dp" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
