--- a/App/app/src/main/res/layout/activity_eliminar_tareas.xml
+++ b/App/app/src/main/res/layout/activity_eliminar_tareas.xml
@@ -45,7 +45,7 @@
             android:text="Seleccionar tarea" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/spinner_tareas_Eliminar"
             android:layout_width="266dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
