--- a/App/app/src/main/res/layout/activity_agregar_proyecto.xml
+++ b/App/app/src/main/res/layout/activity_agregar_proyecto.xml
@@ -32,7 +32,9 @@
             android:layout_marginEnd="38dp"
             android:clickable="true"
             app:backgroundTint="@color/colorPrimary"
-            app:srcCompat="@android:drawable/ic_input_add" />
+            app:srcCompat="@android:drawable/ic_input_add"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="38dp" />
 
         <TextView
             android:id="@+id/textView38"
@@ -52,7 +54,9 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="29dp"
             android:layout_marginTop="117dp"
-            android:text="Nombre" />
+            android:text="Nombre"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="29dp" />
 
         <TextView
             android:id="@+id/textView40"
@@ -61,7 +65,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/textView39"
             android:layout_marginTop="182dp"
-            android:text="Descripción" />
+            android:text="Descripción"
+            android:layout_alignLeft="@+id/textView39" />
 
         <TextView
             android:id="@+id/textView41"
@@ -69,7 +74,8 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/textView39"
             android:layout_centerVertical="true"
-            android:text="Agregar operaciones" />
+            android:text="Agregar operaciones"
+            android:layout_alignLeft="@+id/textView39" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="210dp"
@@ -77,7 +83,9 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
             android:layout_marginEnd="49dp"
-            android:layout_marginTop="108dp">
+            android:layout_marginTop="108dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="49dp">
 
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
@@ -92,7 +100,9 @@
             android:layout_alignTop="@+id/textView40"
             android:layout_marginEnd="46dp"
             android:ems="10"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="46dp" />
 
         <Spinner
             android:id="@+id/spinner11"
@@ -100,7 +110,8 @@
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/textView38"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="193dp" />
+            android:layout_marginBottom="193dp"
+            android:layout_alignRight="@+id/textView38" />
 
     </RelativeLayout>
 
