--- a/App/app/src/main/res/layout/activity_agregar_usuario.xml
+++ b/App/app/src/main/res/layout/activity_agregar_usuario.xml
@@ -42,7 +42,9 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="25dp"
             android:layout_marginTop="79dp"
-            android:text="Nombre" />
+            android:text="Nombre"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="25dp" />
 
         <TextView
             android:id="@+id/textView31"
@@ -51,7 +53,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/textView30"
             android:layout_marginTop="137dp"
-            android:text="Contraseña" />
+            android:text="Contraseña"
+            android:layout_alignLeft="@+id/textView30" />
 
         <TextView
             android:id="@+id/textView32"
@@ -60,7 +63,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/textView30"
             android:layout_marginTop="198dp"
-            android:text="Número" />
+            android:text="Número"
+            android:layout_alignLeft="@+id/textView30" />
 
         <TextView
             android:id="@+id/textView33"
@@ -69,7 +73,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/textView30"
             android:layout_marginBottom="230dp"
-            android:text="Correo" />
+            android:text="Correo"
+            android:layout_alignLeft="@+id/textView30" />
 
         <TextView
             android:id="@+id/textView34"
@@ -78,56 +83,57 @@
             android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/textView30"
             android:layout_marginBottom="167dp"
-            android:text="Tipo de Usuario" />
+            android:text="Tipo de Usuario"
+            android:layout_alignLeft="@+id/textView30" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/correoAddUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView33"
             android:layout_alignStart="@+id/textView29"
             android:ems="10"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:layout_alignLeft="@+id/textView29" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/numeroAddUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView32"
             android:layout_alignStart="@+id/textView29"
             android:ems="10"
-            android:inputType="phone" />
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="213dp"
-            android:layout_height="38dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/textView29"
-            android:layout_marginTop="67dp">
-
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="213dp"
-            android:layout_height="40dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/textView29"
-            android:layout_marginTop="121dp">
-
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
+            android:inputType="phone"
+            android:layout_alignLeft="@+id/textView29" />
 
         <Spinner
             android:id="@+id/spinner_tipo_usuario"
             android:layout_width="188dp"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/editText"
-            android:layout_alignTop="@+id/textView34" />
+            android:layout_alignEnd="@+id/correoAddUser"
+            android:layout_alignTop="@+id/textView34"
+            android:layout_alignRight="@+id/correoAddUser" />
+
+        <EditText
+            android:id="@+id/nameAddUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView30"
+            android:layout_alignLeft="@+id/textView29"
+            android:layout_alignStart="@+id/textView29"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/contrasennaAddUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/textView29"
+            android:layout_marginTop="121dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:layout_alignLeft="@+id/textView29" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
