--- a/App/app/src/main/res/layout/activity_agregar_trabajador.xml
+++ b/App/app/src/main/res/layout/activity_agregar_trabajador.xml
@@ -15,7 +15,7 @@
 
         <Button
             android:id="@+id/button_agregar_trabajador"
-            android:layout_width="200dp"
+            android:layout_width="209dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
@@ -54,28 +54,32 @@
             android:text="Rol" />
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/textApodo"
             android:layout_width="203dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="105dp">
 
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="200dp"
+        <EditText
+            android:id="@+id/textoApodo"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="193dp">
+            android:layout_alignBottom="@+id/textView21"
+            android:layout_alignStart="@+id/button_agregar_trabajador"
+            android:ems="10"
+            android:inputType="textPersonName" />
 
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
+        <EditText
+            android:id="@+id/textoPuesto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/textView22"
+            android:layout_centerHorizontal="true"
+            android:ems="10"
+            android:inputType="textPersonName" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
