--- a/App/app/src/main/res/layout/activity_editar_proyecto.xml
+++ b/App/app/src/main/res/layout/activity_editar_proyecto.xml
@@ -12,23 +12,22 @@
 
 
         <Button
-            android:id="@+id/button_agregar_operacion2"
+            android:id="@+id/button_editar_proyecto"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="52dp"
+            android:layout_marginBottom="157dp"
             android:background="@color/colorSecondary"
             android:text="Confirmar"
             android:textColor="@color/colorAccent" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton3"
+            android:id="@+id/floatingActionButton_operaciones_editar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/spinner11"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="34dp"
+            android:layout_alignBottom="@+id/spinner_operacionesPro_editar"
+            android:layout_toEndOf="@+id/spinner_proyectos_editar"
             android:clickable="true"
             app:backgroundTint="@color/colorPrimary"
             app:srcCompat="@android:drawable/ic_input_add" />
@@ -47,10 +46,11 @@
             android:id="@+id/textView39"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/textView42"
-            android:layout_marginTop="189dp"
-            android:text="Nombre" />
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="187dp"
+            android:text="Editar nombre" />
 
         <TextView
             android:id="@+id/textView40"
@@ -66,38 +66,39 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/textView39"
-            android:layout_marginBottom="185dp"
+            android:layout_marginBottom="99dp"
             android:text="Agregar operaciones" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="203dp"
-            android:layout_height="38dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/textView38"
-            android:layout_marginTop="180dp">
+            android:layout_marginTop="161dp">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/text_nuevoNombreProyec"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
 
         <EditText
-            android:id="@+id/editText4"
+            android:id="@+id/text_descripcionPro_agregar"
             android:layout_width="203dp"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_alignStart="@+id/textView38"
             android:layout_centerVertical="true"
             android:ems="10"
             android:inputType="textMultiLine" />
 
         <Spinner
-            android:id="@+id/spinner11"
+            android:id="@+id/spinner_operacionesPro_editar"
             android:layout_width="214dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="141dp"
-            android:layout_marginStart="71dp" />
+            android:layout_marginBottom="50dp"
+            android:layout_marginStart="66dp" />
 
         <TextView
             android:id="@+id/textView42"
@@ -110,7 +111,7 @@
             android:text="Seleccionar proyecto" />
 
         <Spinner
-            android:id="@+id/spinner12"
+            android:id="@+id/spinner_proyectos_editar"
             android:layout_width="219dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
