--- a/App/app/src/main/res/layout/activity_eliminar_usuario.xml
+++ b/App/app/src/main/res/layout/activity_eliminar_usuario.xml
@@ -12,7 +12,7 @@
 
 
         <Button
-            android:id="@+id/button_agregar_usuario2"
+            android:id="@+id/button_eliminar_User"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -43,7 +43,7 @@
             android:text="Seleccionar usuario" />
 
         <Spinner
-            android:id="@+id/spinner10"
+            android:id="@+id/spinnerElimUser"
             android:layout_width="257dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
